# TextlibGif

app/: build.gradle
app/src/androidTest/java/android/com/textlibgif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CyxGifLib.cpp  CyxGifLib.h
app/src/main/java/android/com/textlibgif/: MainActivity.java
app/src/main/java/com/gif/: GifDecode.java  GifEncode.java
app/src/main/res/values/: strings.xml
app/src/test/java/android/com/textlibgif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
